[project]
name = "agent-2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colorama>=0.4.6",
    "dotenv>=0.9.9",
    "langchain==0.3.0",
    "langchain-core==0.3.75",
    "langgraph>=0.6.6",
    "requests>=2.32.5",
]
